@@ -57,6 +57,7 @@ void gcr_grid_delete_all (GcrGrid *grid);
 void gcr_grid_select_all (GcrGrid *grid);
 void gcr_grid_customize_column (GcrGrid *grid, unsigned column, unsigned chars, bool editable);
 void gcr_grid_set_allow_multiple_selection (GcrGrid *grid, bool allow);
+void gcr_grid_add_row_to_selection (GcrGrid *grid, unsigned row);
 
 typedef void (*GridCb) (unsigned i, void *user_data);
 void gcr_grid_for_each_selected (GcrGrid *grid, GridCb cb, void *user_data);
