@@ -178,6 +178,23 @@
                       </packing>
                     </child>
                     <child>
+                      <object class="GtkButton" id="select-all">
+                        <property name="label" translatable="yes">Select _all</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="can_default">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="use_action_appearance">False</property>
+                        <property name="use_underline">True</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">4</property>
+                        <property name="top_attach">4</property>
+                        <property name="width">1</property>
+                        <property name="height">1</property>
+                      </packing>
+                    </child>
+                    <child>
                       <object class="GtkLabel" id="radius-lbl">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
